--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "projeto-escala-cmyk",
   "version": "0.1.0",
   "private": true,
+  "homepage": "projeto-escala-cmyk/"
   "dependencies": {
     "@tailwindcss/cli": "^4.1.16",
     "@testing-library/dom": "^10.4.1",
@@ -17,7 +18,7 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.1.16",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
   },
   "scripts": {
     "start": "react-scripts start",
